tests/__snapshots__/validation-fileExtension-wrong-list-item-type-stderr.snap.txt
Error: Item of the 'fileExtension' list must be of type string.

  2 |   "fileExtension": [
  3 |     "json",
> 4 |     true
    |     ^
  5 |   ]
  6 | }

      at ./tstyche.config.json:4:5

